--- a/src/e_cidadania/apps/news/locale/es/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/news/locale/es/LC_MESSAGES/django.po
@@ -2,19 +2,21 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
+#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-05-23 11:21+0200\n"
-"PO-Revision-Date: 2011-04-18 12:14\n"
+"POT-Creation-Date: 2011-05-23 12:23+0200\n"
+"PO-Revision-Date: 2011-05-23 12:45\n"
 "Last-Translator:   <a@a.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "X-Translated-Using: django-rosetta 0.6.0\n"
 
 #: admin.py:39
@@ -46,7 +48,7 @@ msgstr "Autor"
 #: models.py:41 templates/news/post_add.html:57
 #: templates/news/post_edit.html:52
 msgid "Publish in index page"
-msgstr "Publicar en la página de inicio"
+msgstr "Publicar en la página principal"
 
 #: models.py:42
 msgid "Publish in"
@@ -54,11 +56,11 @@ msgstr "Publicar en"
 
 #: models.py:44
 msgid "If you want to post to the index leave this blank"
-msgstr "Si desea publicar en el índice deje esto en blanco."
+msgstr "Si quieres publicar en la página principal, deja esto en blanco"
 
 #: templates/news/post_add.html:5 templates/news/post_add.html.py:25
 msgid "Add new post"
-msgstr "Agregar nueva noticia"
+msgstr "Añadir nueva noticia"
 
 #: templates/news/post_add.html:50 templates/news/post_add.html.py:81
 #: templates/news/post_edit.html:45
@@ -76,7 +78,7 @@ msgstr "Volver"
 
 #: templates/news/post_add.html:77
 msgid "How to add new posts"
-msgstr "Como añadir nuevas noticias"
+msgstr "Cómo añadir nuevas noticias"
 
 #: templates/news/post_add.html:79
 msgid "An spectacular title! (100 characters)"
@@ -84,38 +86,39 @@ msgstr "¡Un título espectacular! (100 caracteres)"
 
 #: templates/news/post_add.html:80
 msgid "Your story."
-msgstr "Tu historia."
+msgstr "Tu historia"
 
 #: templates/news/post_add.html:81
 msgid "Please use them carefully, you are limited to 4 tags."
-msgstr "Por favor, utilízalas adecuadamente, estáslimitado a 4 etiquetas."
+msgstr "Por favor, úsalas con cuidado, estás limitado a 4 etiquetas"
 
 #: templates/news/post_add.html:82
 msgid "Publish in index"
-msgstr "Publicar en la página de inicio"
+msgstr "Publicar en la página principal"
 
 #: templates/news/post_add.html:82
 msgid ""
-"If you mark this, the post will appear in the spaces index page AND in the "
-"main index."
+"If you mark this, the post will appear in the spaces index page AND in "
+"the main index."
 msgstr ""
-"Si marcas esto, tu noticia aparecerá en tu índice del espacio Y en el índice "
-"general."
+"Si marcas esto, tu noticia se publicará en la página del espacio Y en "
+"la página principal de la web"
 
 #: templates/news/post_delete.html:4
 msgid "Delete news"
-msgstr "Borrar noticias"
+msgstr "Borrar noticia"
 
 #: templates/news/post_delete.html:25
 msgid ""
-"Are you sure you want to delete this post? This action cannot be undone."
+"Are you sure you want to delete this post? This action cannot be "
+"undone."
 msgstr ""
-"¿Estás seguro de que quieres borrar esta noticia? Esta acción no se puede "
-"deshacer"
+"¿Estás seguro de querer borrar esta noticia? Esta acción no se puede "
+"deshacer."
 
 #: templates/news/post_delete.html:27
 msgid "Delete"
-msgstr "Eliminar"
+msgstr "Borrar"
 
 #: templates/news/post_detail.html:36
 msgid "Written by"
@@ -127,7 +130,7 @@ msgstr "el"
 
 #: templates/news/post_edit.html:5
 msgid "Edit news"
-msgstr "Editar noticias"
+msgstr "Editar noticia"
 
 #: templates/news/post_edit.html:66
 msgid "Publish in space"
