--- a/src/e_cidadania/apps/proposals/locale/es/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/proposals/locale/es/LC_MESSAGES/django.po
@@ -2,33 +2,34 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-05-23 11:21+0200\n"
-"PO-Revision-Date: 2011-05-23 10:34\n"
+"POT-Creation-Date: 2011-05-23 12:23+0200\n"
+"PO-Revision-Date: 2011-05-23 12:52\n"
 "Last-Translator:   <a@a.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "X-Translated-Using: django-rosetta 0.6.0\n"
 
 #: models.py:33
 msgid "Economically not viable"
-msgstr "Económicamente no es viable"
+msgstr "Económicamente no viable"
 
 #: models.py:34
 msgid "Legally not viable"
-msgstr "Legalmente no es viable"
+msgstr "Legalmente no viable"
 
 #: models.py:35
 msgid "Technically not viable"
-msgstr "Técnicamente no es viable"
+msgstr "Técnicamente no viable"
 
 #: models.py:36
 msgid "Offtopic"
@@ -78,15 +79,15 @@ msgstr "Continuar"
 
 #: templates/proposals/proposal_add.html:57
 msgid "Admins/moderators read this"
-msgstr "Admins/Moderadores leed esto"
+msgstr "Admins/Moderadores leer esto"
 
 #: templates/proposals/proposal_add.html:58
 msgid ""
-"There are a lot more options in the proposals but they will appear only when "
-"you edit the proposal."
+"There are a lot more options in the proposals but they will appear only"
+" when you edit the proposal."
 msgstr ""
-"Existen muchas opciones más en las propuestas, pero sólo estarán disponibles "
-"cuando se edite la propuesta"
+"Existen un montón de opciones para las propuestas pero sólo se "
+"mostrarán cuando se edite la propuesta."
 
 #: templates/proposals/proposal_add.html:60
 msgid "How to add new proposals"
@@ -94,15 +95,15 @@ msgstr "Cómo añadir nuevas propuestas"
 
 #: templates/proposals/proposal_add.html:62
 msgid "Title resuming the proposal, be concise (50 characters)"
-msgstr "Título resumiendo la propuesta, sé conciso (50 caracteres)"
+msgstr "Título resumiendo la propuesta. Sé conciso (50 caracteres)"
 
 #: templates/proposals/proposal_add.html:63
 msgid ""
-"Describe here your proposal with detail. You can add images or any other "
-"content."
+"Describe here your proposal with detail. You can add images or any "
+"other content."
 msgstr ""
-"Describe aquí tu propuesta con detalle. Puedes añadir imágenes u otro "
-"contenido."
+"Describe aquí tu propuesta detalladamente. Puedes agregar imágenes o "
+"otro tipo de contenido."
 
 #: templates/proposals/proposal_add.html:64
 msgid "Latitude/Longitude"
@@ -110,15 +111,17 @@ msgstr "Latitud/Longitud"
 
 #: templates/proposals/proposal_add.html:64
 msgid "You'll have to put this if you want to locate the proposal in a map."
-msgstr "Rellena esto si quieres que tu propuesta se localice en un mapa."
+msgstr ""
+"Tendrás qyue releenar esto si quiere que se sitúe tu propuesta en un "
+"mapa."
 
 #: templates/proposals/proposal_add.html:65
 msgid ""
-"Relevant tags for the proposal, p.e. where the proposal is localted, what is "
-"related to it, etc."
+"Relevant tags for the proposal, p.e. where the proposal is localted, "
+"what is related to it, etc."
 msgstr ""
-"Etiquetas relevantes para la propuesta, ej: dónde se realiza la propuesta, "
-"qué está relacionada con ella."
+"Etiquetas relevantes para la propuesta. Ej: Dónde se localiza, cosas "
+"relacionadas, etc."
 
 #: templates/proposals/proposal_delete.html:4
 msgid "Delete proposal"
@@ -126,16 +129,17 @@ msgstr "Borrar propuesta"
 
 #: templates/proposals/proposal_delete.html:13
 msgid ""
-"Are you sure you want to delete this proposal? This action cannot be undone."
+"Are you sure you want to delete this proposal? This action cannot be "
+"undone."
 msgstr ""
-"¿Estás seguro de que quieres borrar esta propuesta? Esta acción no se puede "
-"deshacer"
+"¿Estás seguro de querer borrar esta propuesta? Esta acción no se puede"
+" deshacer."
 
 #: templates/proposals/proposal_delete.html:15
 #: templates/proposals/proposal_detail.html:22
 #: templates/proposals/proposal_list.html:22
 msgid "Delete"
-msgstr "Eliminar"
+msgstr "Borrar"
 
 #: templates/proposals/proposal_delete.html:16
 #: templates/proposals/proposal_edit.html:15
@@ -150,7 +154,7 @@ msgstr "Ver propuesta"
 #: templates/proposals/proposal_detail.html:17
 #: templates/proposals/proposal_list.html:17
 msgid "Add"
-msgstr "Agregar"
+msgstr "Añadir"
 
 #: templates/proposals/proposal_detail.html:19
 #: templates/proposals/proposal_list.html:19
@@ -165,7 +169,7 @@ msgstr "propuesto por"
 #: templates/proposals/proposal_detail.html:33
 #: templates/proposals/proposal_list.html:34
 msgid " at "
-msgstr " a las "
+msgstr "a las"
 
 #: templates/proposals/proposal_edit.html:14
 msgid "Create"
@@ -173,7 +177,7 @@ msgstr "Crear"
 
 #: templates/proposals/proposal_list.html:5
 msgid "View proposals"
-msgstr "Ver las propuestas"
+msgstr "Ver propuestas"
 
 #: templates/proposals/proposal_list.html:34
 msgid "comments"
@@ -181,7 +185,4 @@ msgstr "comentarios"
 
 #: templates/proposals/proposal_list.html:43
 msgid "There are no proposals for this space."
-msgstr "No existen propuestas para este espacio."
-
-#~ msgid "Message"
-#~ msgstr "Mensaje"
+msgstr "No hay propuestas para este espacio."
