--- a/src/e_cidadania/apps/news/locale/es/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/news/locale/es/LC_MESSAGES/django.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-05-23 12:23+0200\n"
-"PO-Revision-Date: 2011-05-23 12:45\n"
+"POT-Creation-Date: 2011-06-07 17:13+0200\n"
+"PO-Revision-Date: 2011-06-08 11:27\n"
 "Last-Translator:   <a@a.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -56,11 +56,11 @@ msgstr "Publicar en"
 
 #: models.py:44
 msgid "If you want to post to the index leave this blank"
-msgstr "Si quieres publicar en la página principal, deja esto en blanco"
+msgstr "Si quieres publicar en la página principal deja esto en blanco"
 
 #: templates/news/post_add.html:5 templates/news/post_add.html.py:25
 msgid "Add new post"
-msgstr "Añadir nueva noticia"
+msgstr "Agregar noticia"
 
 #: templates/news/post_add.html:50 templates/news/post_add.html.py:81
 #: templates/news/post_edit.html:45
@@ -78,7 +78,7 @@ msgstr "Volver"
 
 #: templates/news/post_add.html:77
 msgid "How to add new posts"
-msgstr "Cómo añadir nuevas noticias"
+msgstr "Cómo agregar nuevas noticias"
 
 #: templates/news/post_add.html:79
 msgid "An spectacular title! (100 characters)"
@@ -90,7 +90,7 @@ msgstr "Tu historia"
 
 #: templates/news/post_add.html:81
 msgid "Please use them carefully, you are limited to 4 tags."
-msgstr "Por favor, úsalas con cuidado, estás limitado a 4 etiquetas"
+msgstr "Por favor, úsalo con cuidado, estás lomitado a 4 etiquetas"
 
 #: templates/news/post_add.html:82
 msgid "Publish in index"
@@ -101,24 +101,24 @@ msgid ""
 "If you mark this, the post will appear in the spaces index page AND in "
 "the main index."
 msgstr ""
-"Si marcas esto, tu noticia se publicará en la página del espacio Y en "
-"la página principal de la web"
+"Si marcas esto, la noticia aparecerá en la página principal del "
+"espacio Y en la portada"
 
 #: templates/news/post_delete.html:4
 msgid "Delete news"
-msgstr "Borrar noticia"
+msgstr "Eliminar noticias"
 
 #: templates/news/post_delete.html:25
 msgid ""
 "Are you sure you want to delete this post? This action cannot be "
 "undone."
 msgstr ""
-"¿Estás seguro de querer borrar esta noticia? Esta acción no se puede "
-"deshacer."
+"¿Estás seguro de que quieres borrar esta noticia? Esta acción no se "
+"puede deshacer."
 
 #: templates/news/post_delete.html:27
 msgid "Delete"
-msgstr "Borrar"
+msgstr "Eliminar"
 
 #: templates/news/post_detail.html:36
 msgid "Written by"
@@ -126,11 +126,11 @@ msgstr "Escrito por"
 
 #: templates/news/post_detail.html:36
 msgid "on"
-msgstr "el"
+msgstr "el "
 
 #: templates/news/post_edit.html:5
 msgid "Edit news"
-msgstr "Editar noticia"
+msgstr "Editar noticias"
 
 #: templates/news/post_edit.html:66
 msgid "Publish in space"
